feat: adding authentication and authorization
