# backend/auth/models/login.go
@@ -1,0 +1,11 @@
+// auth/models/login.go
+package models
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type LoginResponse struct {
+	Token string `json:"token"`
+}
